--- a/src/components/ContactPageComponent/ContactPageComponent.css
+++ b/src/components/ContactPageComponent/ContactPageComponent.css
@@ -18,7 +18,7 @@
 
 .contact-h2 {
     color: black;
-    width: 15%;
+    width: 30%;
     display: inline-flex;
     font-weight: 600;
     margin-top: 18%;
@@ -29,7 +29,7 @@
 .contact-paragraph {
     color: black;
     display: block;
-    width: 25%;
+    width: 30%;
     float: left;
 }
 
